-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0
-
-
ef5ba24a1 (dev), b36bdbb3c (6.8), c739f2934 (tqtc/lts-6.5)
-
Multimedia wk 43-44
Linux Ubuntu 22.04.4 / Wayland
Qt Creator 13.0.0
Device: Raspberry Pi4 64 bit / EGLFS, wayland-egl
Steps to reproduce:
- Open QML camera example (declarative camera)
- Run the app on the device.
- Start switching the cameras.
Expected: The camera can be switched.
** Actual: The app crashes (segmentation fault)
Reproducibility: 100% **
- relates to
-
QTQAINFRA-6225
Qt Test Attack - Q2, 2024
-
- Open
-
| For Gerrit Dashboard: QTBUG-124350 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 603253,4 | GStreamer: camera - stop pipeline while switching camera (format) | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 603544,2 | GStreamer: camera - stop pipeline while switching camera (format) | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 603712,2 | GStreamer: camera - stop pipeline while switching camera (format) | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
| 606152,1 | GStreamer: camera - stop pipeline while switching camera (format) | 6.8.1 | qt/qtmultimedia | Status: ABANDONED | 0 | 0 |