GStreamer: camera - stop pipeline while switching camera (format)

We've seen crashes when updating the camera / camera format via idle pad
probes. So we stop the pipeline while switching the camera / camera
format.

We also avoid unnecessary pipeline changes when the format does not
change.

Fixes: QTBUG-124350
Fixes: QTBUG-129351
Pick-to: 6.5
Change-Id: Ief2a2c76b1b4a23aacb63104a2c8a59b210c6242
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit ef5ba24a17426008a08d7028a6fef0a1bcc0a47c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>